--- a/_includes/sidebar_en.html
+++ b/_includes/sidebar_en.html
@@ -11,6 +11,9 @@
 					<a href="{% if page.url != '/' %}/{% endif %}#{{ doc.id | replace: '/', '' | replace: '.', '' }}">
 						{{ doc.title }}
 						{% if doc.type %}<span class="endpoint {{ doc.type }}"></span>{% endif %}
+						{% if doc.split %}
+						<p class="line" style=" border-bottom: #e1e1e1 1px solid;width: 95%; margin: 5px 0;"></p>
+						{% endif %}
 					</a>
 				</li>
 				{% endfor %}
