--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 
 		{% seo %}
 
-		<link rel="stylesheet" href="../css/style.css">
+		<link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
 		<link rel="icon" type="image/png" href="/favicon.ico">
 
 		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
@@ -19,7 +19,7 @@
 		{% endif %}
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-		<script src="../js/main.js"></script>
+		<script src="{{ site.baseurl }}/js/main.js"></script>
 	</head>
 	<body>
 		<header>
