--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,27 @@
 		<script src="{{ site.baseurl }}/js/main.js"></script>
 	</head>
 	<body>
+
+	<header>
+		<h1>
+			<button type="button" class="open-nav" id="open-nav"></button>
+			<a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo.svg" height="40" alt="{{ site.title }} logo"></a>
+		</h1>
+
+		<form action="{{ site.baseurl }}/search/" method="get">
+			<input type="text" name="q" id="search-input" placeholder="Search">
+			<input type="submit" value="Search" style="display: none;">
+		</form>
+		<div id="spot_sidebar">
+			<div class="sidebar_en">{% include sidebar_en.html %}</div>
+			<div class="sidebar_cn">{% include sidebar_cn.html %}</div>
+		</div>
+		<div id="futures_sidebar">
+			<div class="sidebar_en">{% include futures_sidebar_en.html %}</div>
+			<div class="sidebar_cn">{% include futures_sidebar_cn.html %}</div>
+		</div>
+	</header>
+
 		<div class="main">
 			<div class="i18nHead">
         <div class="i18nButton" id="cn">简体中文</div>
@@ -47,6 +68,7 @@
 			window.lang = "en";
 
 			$("#futures_content").hide();
+			$("#futures_sidebar").hide();
 
             $(".index_cn").hide();
             $("#en").hide();
@@ -56,14 +78,18 @@
 			// 展示现货
 			$(".show_spot").click(function (){
 				$("#spot_content").show();
+				$("#spot_sidebar").show();
 				$("#futures_content").hide();
+				$("#futures_sidebar").hide();
 				$(".show_spot").addClass("active-type");
 				$(".show_futures").removeClass("active-type");
 			});
 			// 展示合约
 			$(".show_futures").click(function (){
 				$("#spot_content").hide();
+				$("#spot_sidebar").hide();
 				$("#futures_content").show();
+				$("#futures_sidebar").show();
 				$(".show_futures").addClass("active-type");
 				$(".show_spot").removeClass("active-type");
 			});
