--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,12 +49,12 @@
 				<div class="i18nButton" id="en">english</div>
 			</div>
 			<div class="trade-type-select" id="trade_type_en">
-				<a class="active-type show_spot" >Spot</a>
-				<a class="show_futures">Futures</a>
+				<a style="cursor:pointer;" class="active-type show_spot" >Spot</a>
+				<a style="cursor:pointer;" class="show_futures">Futures</a>
 			</div>
 			<div class="trade-type-select" id="trade_type_cn">
-				<a class="active-type show_spot">现货</a>
-				<a class="show_futures">合约</a>
+				<a style="cursor:pointer;" class="active-type show_spot">现货</a>
+				<a style="cursor:pointer;" class="show_futures">合约</a>
 			</div>
       <div id="content" style="margin-top: 40px;">
 			    {{ content }}
