--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -256,6 +256,10 @@ h3 .endpoint {
 		color: #aaa;
 		margin-top: -11px;
 	}
+	.remark {
+		color: #aaa;
+		margin-top: -11px;
+	}
 
 	@media (max-width: $mobile-break) {
 		margin: 0;
