--- a/_includes/sidebar_cn.html
+++ b/_includes/sidebar_cn.html
@@ -7,6 +7,7 @@
 			<ul>
 				{% assign sorted_docs = collection.docs | sort: "position_number" %}
 				{% for doc in sorted_docs %}
+				{% if doc.display==null or doc.display==1 %}
 				<li>
 					<a href="{% if page.url != '/' %}/{% endif %}#{{ doc.id | replace: '/', '' | replace: '.', '' }}">
 						{{ doc.title }}
@@ -16,6 +17,7 @@
 						{% endif %}
 					</a>
 				</li>
+				{% endif %}
 				{% endfor %}
 			</ul>
 		</section>
