Remove "Change of entrust"

--- a/_includes/spot.html
+++ b/_includes/spot.html
@@ -4,6 +4,7 @@
     {% if collection.type=="spot" and collection.language=="en" %}
     {% assign sorted_docs = collection.docs | sort: "position_number" %}
     {% for doc in sorted_docs %}
+    {% if doc.display==null or doc.display==1 %}
     <section class="doc-content">
         <section class="left-docs">
             <h3>
@@ -63,6 +64,7 @@
         </section>
         {% endif %}
     </section>
+    {% endif %}
     {% endfor %}
     {% endif %}
     {% endfor %}
@@ -74,6 +76,7 @@
     {% if collection.type=="spot" and collection.language=="cn" %}
     {% assign sorted_docs = collection.docs | sort: "position_number" %}
     {% for doc in sorted_docs %}
+    {% if doc.display==null or doc.display==1 %}
     <section class="doc-content">
         <section class="left-docs">
             <h3>
@@ -133,6 +136,7 @@
         </section>
         {% endif %}
     </section>
+    {% endif %}
     {% endfor %}
     {% endif %}
     {% endfor %}
