--- a/_sass/_monaki.scss
+++ b/_sass/_monaki.scss
@@ -1,18 +1,18 @@
 .right-code code .hll { background-color: #49483e }
 .right-code code .c { color: #75715e } /* Comment */
-.right-code code .err { color: #960050; background-color: #1e0010 } /* Error */
+.right-code code .err { color: #c14286; background-color: #000000 } /* Error */
 .right-code code .k { color: #66d9ef } /* Keyword */
 .right-code code .l { color: #ae81ff } /* Literal */
 .right-code code .n { color: #f8f8f2 } /* Name */
 .right-code code .o { color: #f92672 } /* Operator */
-.right-code code .p { color: #f8f8f2 } /* Punctuation */
+.right-code code .p { color: #f0b90b; font-weight: bold } /* Punctuation */
 .right-code code .cm { color: #75715e } /* Comment.Multiline */
 .right-code code .cp { color: #75715e } /* Comment.Preproc */
 .right-code code .c1 { color: #75715e } /* Comment.Single */
 .right-code code .cs { color: #75715e } /* Comment.Special */
 .right-code code .ge { font-style: italic } /* Generic.Emph */
 .right-code code .gs { font-weight: bold } /* Generic.Strong */
-.right-code code .kc { color: #66d9ef } /* Keyword.Constant */
+.right-code code .kc { color: #05d3fb } /* Keyword.Constant */
 .right-code code .kd { color: #66d9ef } /* Keyword.Declaration */
 .right-code code .kn { color: #f92672 } /* Keyword.Namespace */
 .right-code code .kp { color: #66d9ef } /* Keyword.Pseudo */
@@ -29,7 +29,7 @@
 .right-code code .ni { color: #f8f8f2 } /* Name.Entity */
 .right-code code .ne { color: #a6e22e } /* Name.Exception */
 .right-code code .nf { color: #a6e22e } /* Name.Function */
-.right-code code .nl { color: #f8f8f2 } /* Name.Label */
+.right-code code .nl { color: #e7b92a; font-weight: bold } /* Name.Label */
 .right-code code .nn { color: #f8f8f2 } /* Name.Namespace */
 .right-code code .nx { color: #a6e22e } /* Name.Other */
 .right-code code .py { color: #f8f8f2 } /* Name.Property */
@@ -39,12 +39,12 @@
 .right-code code .w { color: #f8f8f2 } /* Text.Whitespace */
 .right-code code .mf { color: #ae81ff } /* Literal.Number.Float */
 .right-code code .mh { color: #ae81ff } /* Literal.Number.Hex */
-.right-code code .mi { color: #ae81ff } /* Literal.Number.Integer */
+.right-code code .mi { color: #7e3cf6 } /* Literal.Number.Integer */
 .right-code code .mo { color: #ae81ff } /* Literal.Number.Oct */
 .right-code code .sb { color: #e6db74 } /* Literal.String.Backtick */
 .right-code code .sc { color: #e6db74 } /* Literal.String.Char */
 .right-code code .sd { color: #e6db74 } /* Literal.String.Doc */
-.right-code code .s2 { color: #e6db74 } /* Literal.String.Double */
+.right-code code .s2 { color: #cfdee6 } /* Literal.String.Double */
 .right-code code .se { color: #ae81ff } /* Literal.String.Escape */
 .right-code code .sh { color: #e6db74 } /* Literal.String.Heredoc */
 .right-code code .si { color: #e6db74 } /* Literal.String.Interpol */
