--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -315,6 +315,24 @@ hr {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#232323',GradientType=1 ); /* IE6-9 */
 }
 
+.index-doc-content {
+	border: 0;
+	border-bottom: 1px solid transparent;
+	border-image: linear-gradient(to right,	#eee 0%,#eee 100%,#333333 100%);
+	-moz-border-image: -moz-linear-gradient(left,	#eee 0%, #eee 100%, #333333 100%);
+	-webkit-border-image: -webkit-linear-gradient(left,	#eee 0%,#eee 100%,#333333 100%);
+	border-image-slice: 1;
+	padding: 30px 0;
+	background: #ffffff; /* Old browsers */
+	background: -moz-linear-gradient(left,	#ffffff 0%, #ffffff 100%, #232323 60%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, right top, color-stop(0%,#ffffff), color-stop(100%,#ffffff), color-stop(100%,#232323)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(left,	#ffffff 0%,#ffffff 100%,#232323 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(left,	#ffffff 0%,#ffffff 100%,#232323 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(left,	#ffffff 0%,#ffffff 100%,#232323 100%); /* IE10+ */
+	background: linear-gradient(to right,	#ffffff 0%,#ffffff 100%,#232323 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#232323',GradientType=1 ); /* IE6-9 */
+}
+
 .doc-content:after {
 	visibility: hidden;
 	display: block;
@@ -323,7 +341,19 @@ hr {
 	height: 0;
 }
 
+.index-doc-content:after {
+	visibility: hidden;
+	display: block;
+	content: "";
+	clear: both;
+	height: 0;
+}
+
 .doc-content:last-child {
+	border: 0;
+}
+
+.index-doc-content:last-child {
 	border: 0;
 }
 
@@ -434,6 +464,15 @@ hr {
 	}
 
 	.doc-content {
+		background: #fff;
+		padding-bottom: 0;
+		border-image: none;
+		-moz-border-image: none;
+		-webkit-border-image: none;
+		border-color: #eee;
+	}
+
+	.index-doc-content {
 		background: #fff;
 		padding-bottom: 0;
 		border-image: none;
