--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,10 @@
 			<div class="sidebar_en">{% include futures_sidebar_en.html %}</div>
 			<div class="sidebar_cn">{% include futures_sidebar_cn.html %}</div>
 		</div>
+		<div id="margin_sidebar">
+			<div class="sidebar_en">{% include margin_sidebar_en.html %}</div>
+			<div class="sidebar_cn">{% include margin_sidebar_cn.html %}</div>
+		</div>
 		<div id="third_party_sidebar">
 			<div class="sidebar_en">{% include third_party_sidebar_en.html %}</div>
 			<div class="sidebar_cn">{% include third_party_sidebar_cn.html %}</div>
@@ -64,6 +68,7 @@
 				<a style="cursor:pointer;" class="active-type show_index" >Index</a>
 				<a style="cursor:pointer;" class="show_spot" >Spot</a>
 				<a style="cursor:pointer;" class="show_futures">Futures</a>
+				<a style="cursor:pointer;" class="show_margin">Margin</a>
 				<a style="cursor:pointer;" class="show_third_party">Third Party</a>
 				<a style="cursor:pointer;" class="show_user_center">User Center</a>
 			</div>
@@ -71,6 +76,7 @@
 				<a style="cursor:pointer;" class="active-type show_index">首页</a>
 				<a style="cursor:pointer;" class="show_spot">现货</a>
 				<a style="cursor:pointer;" class="show_futures">合约</a>
+				<a style="cursor:pointer;" class="show_margin">杠杆</a>
 				<a style="cursor:pointer;" class="show_third_party">第三方平台</a>
 				<a style="cursor:pointer;" class="show_user_center">用户中心</a>
 			</div>
@@ -88,7 +94,7 @@
 			//默认展示模块
 			var model = "";
 			//所有模块数组
-			var models = new Array("index", "spot", "futures", "third_party", "user_center");
+			var models = new Array("index", "spot", "futures", "margin", "third_party", "user_center");
 
 			var query = window.location.toString();
 			//有锚点定位
