--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,14 @@
 			<div class="sidebar_en">{% include margin_sidebar_en.html %}</div>
 			<div class="sidebar_cn">{% include margin_sidebar_cn.html %}</div>
 		</div>
+		<div id="s_copy_trading_sidebar">
+			<div class="sidebar_en">{% include s_copy_trading_sidebar_en.html %}</div>
+			<div class="sidebar_cn">{% include s_copy_trading_sidebar_cn.html %}</div>
+		</div>
+		<div id="f_copy_trading_sidebar">
+			<div class="sidebar_en">{% include f_copy_trading_sidebar_en.html %}</div>
+			<div class="sidebar_cn">{% include f_copy_trading_sidebar_cn.html %}</div>
+		</div>
 		<div id="third_party_sidebar">
 			<div class="sidebar_en">{% include third_party_sidebar_en.html %}</div>
 			<div class="sidebar_cn">{% include third_party_sidebar_cn.html %}</div>
@@ -69,6 +77,8 @@
 				<a style="cursor:pointer;" class="show_spot" >Spot</a>
 				<a style="cursor:pointer;" class="show_futures">Futures</a>
 				<a style="cursor:pointer;" class="show_margin">Margin</a>
+				<a style="cursor:pointer;" class="show_s_copy_trading">Spot Copy Trading</a>
+				<a style="cursor:pointer;" class="show_f_copy_trading">Futures Copy Trading</a>
 				<a style="cursor:pointer;" class="show_third_party">Third Party</a>
 				<a style="cursor:pointer;" class="show_user_center">User Center</a>
 			</div>
@@ -77,6 +87,8 @@
 				<a style="cursor:pointer;" class="show_spot">现货</a>
 				<a style="cursor:pointer;" class="show_futures">合约</a>
 				<a style="cursor:pointer;" class="show_margin">杠杆</a>
+				<a style="cursor:pointer;" class="show_s_copy_trading">现货跟单</a>
+				<a style="cursor:pointer;" class="show_f_copy_trading">合约跟单</a>
 				<a style="cursor:pointer;" class="show_third_party">第三方平台</a>
 				<a style="cursor:pointer;" class="show_user_center">用户中心</a>
 			</div>
@@ -94,7 +106,7 @@
 			//默认展示模块
 			var model = "";
 			//所有模块数组
-			var models = new Array("index", "spot", "futures", "margin", "third_party", "user_center");
+			var models = new Array("index", "spot", "futures", "margin", "s_copy_trading", "f_copy_trading", "third_party", "user_center");
 
 			var query = window.location.toString();
 			//有锚点定位
